--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,8 +35,8 @@ include(cmake/config/libraries.cmake)
 
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/)
 
-# Fortran filesystem library
-include(cmake/ext_libs/filesystem.cmake)
+# Fortran filesystem library "ffilesystem"
+include(cmake/ext_libs/ffilesystem.cmake)
 
 if(mpi)
   find_package(MPI COMPONENTS C Fortran REQUIRED)
