--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,16 +93,15 @@ jobs:
       run: ctest --test-dir build -LE unit -E 3d
 
 
-  linux-gcc7:
-    # NOTE: GCC < 7.5 is not supported by Gemini in general
+  linux-gcc8-cmake-320:
     needs: linux
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
 
     env:
-      CC: gcc-7
-      CXX: g++-7
-      FC: gfortran-7
+      CC: gcc-8
+      CXX: g++-8
+      FC: gfortran-8
       cmake_version: '3.20.6'
 
     steps:
