filesystem: flags for old compilers via interface link

--- a/.github/workflows/ci_oldest.yml
+++ b/.github/workflows/ci_oldest.yml
@@ -1,8 +1,8 @@
 name: ci_oldest
 
 env:
-  CMAKE_BUILD_PARALLEL_LEVEL: 3
   CTEST_PARALLEL_LEVEL: 2
+  CMAKE_GENERATOR: Ninja
 
 on:
   push:
@@ -42,8 +42,8 @@ jobs:
         sudo apt update -yq
         sudo $(cmake -P scripts/requirements.cmake 2>&1)
 
-    - name: install GCC 8 (ABI compatible with GCC 9 system libs)
-      run: sudo apt install gcc-8 g++-8 gfortran-8
+    - name: install Ninja + GCC 8 (ABI compatible with GCC 9 system libs)
+      run: sudo apt install ninja-build gcc-8 g++-8 gfortran-8
 
     - name: Install CMake 3.20
       timeout-minutes: 1
