--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -73,7 +73,11 @@ add_executable(test_compiler_vendor test_compiler_vendor.f90)
 target_link_libraries(test_compiler_vendor PRIVATE config
 ffilesystem::filesystem ${lib_filesystem}
 )
-set_target_properties(test_compiler_vendor PROPERTIES LINKER_LANGUAGE CXX)
+if(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
+  set_target_properties(test_compiler_vendor PROPERTIES LINKER_LANGUAGE Fortran)
+else()
+  set_target_properties(test_compiler_vendor PROPERTIES LINKER_LANGUAGE CXX)
+endif()
 add_test(NAME unit:compiler_vendor
 COMMAND $<TARGET_FILE:test_compiler_vendor>
 )
@@ -87,7 +91,11 @@ add_executable(test_expand_envvar test_expand_envvar.f90)
 target_link_libraries(test_expand_envvar PRIVATE config
 ffilesystem::filesystem ${lib_filesystem}
 )
-set_target_properties(test_expand_envvar PROPERTIES LINKER_LANGUAGE CXX)
+if(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
+  set_target_properties(test_expand_envvar PROPERTIES LINKER_LANGUAGE Fortran)
+else()
+  set_target_properties(test_expand_envvar PROPERTIES LINKER_LANGUAGE CXX)
+endif()
 add_test(NAME unit:expand_envvar COMMAND $<TARGET_FILE:test_expand_envvar>)
 set_tests_properties(unit:expand_envvar PROPERTIES
 ENVIRONMENT test__gem=hello
