Revert "refactor main to avoid direct references to objects"
This reverts commit b965b4fe7355efdd7aaa2260f6682150b5970c2a.

--- a/src/numerical/grid/CMakeLists.txt
+++ b/src/numerical/grid/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_library(grid OBJECT grid.f90 readgrid_hdf5.f90 readgrid_nc4.f90 readgrid_raw.f90)
-target_link_libraries(grid PRIVATE const config reader
+target_link_libraries(grid PRIVATE const reader
 h5fortran::h5fortran nc4fortran::nc4fortran
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 )
