--- a/src/numerical/diffusion/CMakeLists.txt
+++ b/src/numerical/diffusion/CMakeLists.txt
@@ -34,13 +34,12 @@ ENVIRONMENT $<$<BOOL:${test_dll_path}>:"PATH=${test_dll_path}">
 
 if(python)
   add_test(NAME unit:diffusion1:python
-  COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${_tmpdifffn}
+  COMMAND ${Python_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_diffusion1D.py ${_tmpdifffn}
   )
   set_tests_properties(unit:diffusion1:python PROPERTIES
   TIMEOUT 10
   LABELS "unit;python"
   REQUIRED_FILES ${_tmpdifffn}
   FIXTURES_REQUIRED gemini_diffusion_fxt
-  DISABLED $<NOT:$<BOOL:${Python3_FOUND}>>
   )
 endif()
