--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       timeout-minutes: 8
       run: |
         cmake -S $GITHUB_WORKSPACE/gemext -B $GITHUB_WORKSPACE/gemext/build --install-prefix=${HOME}/gemlibs
-        cmake --build $GITHUB_WORKSPACE/gemext/build --target msis
+        cmake --build $GITHUB_WORKSPACE/gemext/build --target msis mumps
         cmake --install $GITHUB_WORKSPACE/gemext/build
 
     - name: Configure multi
